<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/headerTv"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/edit_details_activity_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/orgNameEt"
                    android:hint="@string/details_activity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btnUploadPhoto"
                    android:text="@string/btn_update_photo"
                    android:layout_below="@+id/orgNameEt"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btnDeletePhoto"
                    android:text="@string/btn_delete_photo"
                    android:visibility="gone"
                    android:layout_toEndOf="@id/btnUploadPhoto"
                    android:layout_toRightOf="@id/btnUploadPhoto"
                    android:layout_alignBottom="@id/btnUploadPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:id="@+id/orgPhoto"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

        </RelativeLayout>


        <EditText
                android:id="@+id/contactNameEt"
                android:hint="@string/details_activity_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/addressEt"
                android:hint="@string/details_activity_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/websiteEt"
                android:hint="@string/details_activity_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/shortDescriptionTv"
                android:text="@string/details_activity_sd_text"
                android:paddingTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <EditText
                android:id="@+id/shortDescriptionEt"
                android:hint="@string/details_activity_sd_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/longDescriptionTv"
                android:text="@string/details_activity_ld_text"
                android:paddingTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/longDescriptionEt"
                android:lines="20"
                android:minLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:id="@+id/visibleCb"
                android:checked="true"
                android:text="@string/details_activity_visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:text="@string/details_activity_finished"
                android:id="@+id/finishedBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
