<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="75dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

        <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <!--<ImageView android:src="@drawable/robinlogo"-->
                   <!--android:layout_width="150dp"-->
                   <!--android:layout_height="150dp"-->
                   <!--android:layout_marginBottom="24dp"-->
                   <!--android:layout_gravity="center_horizontal" />-->

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/etEmail"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/etPassword"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:padding="12dp"
                android:onClick="loginClick"
                android:text="@string/login"/>

        <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:onClick="registerClick"
                android:text="@string/register"/>

    </LinearLayout>
</ScrollView>
