<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            app:layout_constraintGuide_percent=".5"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent=".4"/>


    <Button
            android:text="@string/restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurantBtn"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/restaurantBtn"
            android:src="@drawable/ic_r"
            app:layout_constraintStart_toStartOf="@+id/restaurantBtn"
            app:layout_constraintEnd_toEndOf="@+id/restaurantBtn"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/foodPantryBtn"
            android:src="@drawable/ic_fp"
            app:layout_constraintStart_toStartOf="@+id/foodPantryBtn"
            app:layout_constraintEnd_toEndOf="@+id/foodPantryBtn"/>

    <Button
            android:text="@string/food_pantry"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foodPantryBtn"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"/>

    <TextView
            android:text="@string/orgs_type_representing"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="130dp"
            app:layout_constraintBottom_toTopOf="@id/guideline2"/>
</android.support.constraint.ConstraintLayout>